alignment issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3679,6 +3679,13 @@ section {
     padding: 10px 40px;
     font-weight: bold;
     color: #ffffff;
+    transition: all .3s ease-out;
+}
+
+.price_section .price_card button:hover {
+    background-color: var(--c2);
+    border: 1px solid var(--c2);
+    transition: all .3s ease-out;
 }
 
 .new_price {
